[tool.poetry]
name = "rigid-body-collisons"
version = "0.1.0"
description = ""
authors = ["svenviktorjonsson <svenviktorjonsson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
